# check-naming-convention

./: README
docs/: Makefile  index.html
docs/prm/: index.py  index.toml  main.py  pyscript.toml
python/: main.py  pyproject.toml
python/prm/: main.py  sample.py  test_function.py  test_variable.py
python/python/: main.py  pyproject.toml
