[project]
dependencies = [
  "nltk==3.8.1"
]
name = "check-naming-convention"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.3.2",
  "djlint==1.34.0",
  "mypy==1.7.0",
  "ruff==0.1.3",
  "ssort==0.11.6",
  "toml-sort==0.23.1"
]

[project.scripts]
check_naming_convention = "main:check_naming_convention"

[tool.setuptools]
py-modules = ["main"]
