[project]
dependencies = [
  "fire==0.5.0",
  "nltk==3.8.1"
]
name = "check-naming-convention"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.3.2",
  "djlint==1.34.0",
  "mypy==1.7.1",
  "ruff==0.1.6",
  "ssort==0.12.0",
  "toml-sort==0.23.1"
]

[project.scripts]
check_naming_convention = "main:main"

[tool.setuptools]
py-modules = ["main"]
