[project]
dependencies = [
  "fire==0.5.0",
  "nltk==3.8.1"
]
name = "check-naming-convention"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.0",
  "djlint==1.34.1",
  "mypy==1.8.0",
  "ruff==0.1.9",
  "ssort==0.12.0",
  "toml-sort==0.23.1"
]

[project.scripts]
check_naming_convention = "main:main"

[tool.setuptools]
py-modules = ["main"]
